<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoMo Note</string>
    <string name="titile_color_picker">Choose Color</string>
    <string name="text_please_select_color">Choose Color</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete">Delete</string>
    <string name="momo_tx_view_op_change_color">Change font color</string>
    <string name="momo_tx_view_op_change_text">Edit</string>
    <string name="text_add_multi_media">Add multimedia</string>
    <string name="text_take_photo">Camera</string>
    <string name="text_record_video">Record</string>
    <string name="text_import_image">Import</string>
    <string name="text_import_video">Import</string>
    <string name="tip_one_video_one_notepaste">You can only add one video in one page</string>
    <string name="text_please_input_text">Please type here</string>
    <string name="text_comfirm">Confirm</string>
    <string name="error_empty_imput">Please type something</string>
    <string name="error_this_is_not_a_image">Invalid image!</string>
    <string name="error_to_load_image_from_external">Failed to import image!</string>
    <string name="error_this_is_not_a_video">Invalid video!</string>
    <string name="error_to_load_video_from_external">Failed to import video!</string>
    <string name="choose_app_to_share_notepaste">Choose one to share</string>
    <string name="error_share_note">Failed to share this page</string>
    <string name="tip_color_changing">Color changing...</string>
    <string name="tip_image_generating_please_wait">Image generating,please wait...</string>
    <string name="note_paste_saving">Saving...</string>
    <string name="comfirm_exit_note_paste_mode">Exit?</string>
    <string name="text_more_color">More...</string>
    <string name="text_record_audio">Record</string>
    <string name="text_import_audio">Import</string>
    <string name="error_this_is_not_a_audio">It\'s not a audio!</string>
    <string name="error_to_load_audio_from_external">Failed to load audio!</string>
    <string name="title_input_album_name">Notebook name</string>
    <string name="text_rename">Rename</string>
    <string name="text_lock_album">Set password</string>
    <string name="confirm_delete">Delete?</string>
    <string name="tip_saving">Saving...</string>
    <string name="text_clear">Clear</string>
    <string name="title_set_pincode">Set Password(Up to 8 words)</string>
    <string name="text_unlock_album">Remove password</string>
    <string name="title_cancel_lock_album">Type password to unlock</string>
    <string name="title_pincode_again">Type again</string>
    <string name="tip_second_pincode_not_equal">Passwords are not same!</string>
    <string name="tip_set_pincode_success">Set password success!</string>
    <string name="tip_wrong_pincode_to_unlock">Wrong password</string>
    <string name="tip_cancel_lock_album_success">Remove password success!</string>
    <string name="tip_wrong_pincode">Wrong password</string>
    <string name="title_input_pincode_to_unlock">Type password</string>
    <string name="tip_import_multi_media">Add multimedia</string>
    <string name="tip_share">Share</string>
    <string name="tip_add_text">Add text</string>
    <string name="tip_hand_draw">Drawing</string>
    <string name="tip_next_page">Next page</string>
    <string name="tip_add_page">Add page</string>
    <string name="tip_previous_page">Previous page</string>
    <string name="tip_to_mode_view">Switch to browse mode</string>
    <string name="tip_to_mode_edit">Switch to edit mode</string>
    <string name="tip_please_wait">Please wait</string>
    <string name="text_add_image">Add image</string>
    <string name="text_add_video">Add video</string>
    <string name="text_add_audio">Add audio</string>
    <string name="text_add_text">Add text</string>
    <string name="msg_choose_way_too_add_image">How do you want to add image?</string>
    <string name="msg_choose_way_too_add_video">How do you want to add video?</string>
    <string name="msg_choose_way_too_add_audio">How do you want to add audio?</string>
    <string name="tip_add_note_object">Add item to page</string>
    <string name="tip_last_page">Last page~</string>
    <string name="tip_first_page">First page~</string>
    <string name="text_file_not_found">File not found</string>
    <string name="text_color_picker_how_to">Slide to choose color</string>
    <string name="tip_only_one_page">This is only one page~</string>
    <string name="userguide_create_album">Welcome to MomoNote\nPress \"New\" button\nto create a new notebook~~</string>
    <string name="tip_mode_edit">Edit Mode</string>
	<string name="tip_mode_view">Browse Mode</string>
	<string name="userguide_edit_mode">Now you can start editing your notebook</string>
	<string name="user_guide_edit_mode_add_object">Add multimedia, text into your page.</string>
	<string name="user_guide_edit_mode_draw_tool">Handwritten drawing tools!</string>
	<string name="user_guide_edit_mode_to_view_mode">All done??\r\nBack to browse mode and watching your masterpiece~</string>
	<string name="user_guide_edit_mode_next_to_add_page">Not enough?\r\nCreate a new page^^</string>
	<string name="user_guide_add_text">When text is selected\r\ndouble click it\r\npopup menu will appear</string>
	<string name="user_guide_reedit_object">Edit again?\r\nLong press onto object\r\nuntil it turn into selected</string>
	<string name="user_guide_first_add_object">Drag to any where\r\nResize\r\nor delete it</string>
	<string name="user_guide_album_menu_guide">Single click to browse\r\n\"Long press\"popup menu will appear\r\nYou can set password to protect it~</string>
	<string name="tip_pincode_empty">Password empty</string>
	<string name="audio_not_found">Audio not found...</string>
	<string name="tip_delete_page">Delete this page</string>
	<string name="tip_deleting_page">Deleting，please wait...</string>
	<string name="conform_delete_page">Delete this page??</string>
	<string name="tip_free_limit_image">Each page can only hold 2 images\r\nIf you think it\'s not too bad\r\nJust buy me a drink~</string>
	<string name="tip_free_limit_media">Each page can only hold 1 video or audio\r\nIf you think it\'s not too bad\r\nJust buy me a drink~</string>
	<string name="btn_buy">Buy</string>
	<string name="btn_no_thanks">No thanks</string>
	<string name="tip_bookmark_refreshing">Fetching bookmarks....</string>
	<string name="tip_no_internet_connection">No Connection.</string>
	<string name="text_clip_webcontent">Clip Web Content</string>
	<string name="text_use_this">Use this?</string>
</resources>