<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp" >

    <EditText
        android:id="@+id/dialog_rename_note_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:duplicateParentState="true"
        android:ems="10"
        android:hint="@string/text_please_input_text"
        android:maxLines="10"
        android:minLines="10"
        android:scrollbars="vertical"
        android:textColor="@color/text"
        android:textSize="@dimen/message_text_size"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/dialog_edit_text_btn_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_below="@id/dialog_rename_note_edit_name" >

        <Button
            android:id="@+id/dialog_rename_note_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="@string/text_comfirm"
            android:textColor="@color/button_text"
            android:textSize="@dimen/message_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_rename_note_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="@string/text_cancel"
            android:textColor="@color/button_text"
            android:textSize="@dimen/message_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    

</RelativeLayout>
