<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:background="@drawable/dialog_bg" android:padding="30dp" android:paddingLeft="10dp" android:paddingRight="10dp">

		<TextView
		    android:id="@+id/dialog_quick_color_picker_text_explain"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="20dp"
		    android:layout_marginTop="20dp"
		    android:gravity="center_horizontal"
		    android:text="@string/text_please_select_color"
		    android:textColor="@color/text"
		    android:textSize="18sp"
		    android:textStyle="bold" >

		</TextView>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/dialog_quick_color_picker_color_area"
			android:layout_marginBottom="20dp" android:orientation="vertical" android:layout_height="wrap_content">
		</LinearLayout>

		<LinearLayout
		    android:id="@+id/dialog_quick_color_picker_btn_area"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

		    <Button
		        android:id="@+id/dialog_quick_color_picker_btn_more_color"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_weight="1"
		        android:background="@drawable/button_normal"
		        android:gravity="center_vertical|center_horizontal"
		        android:text="@string/text_more_color"
		        android:textColor="@color/button_text"
		        android:textSize="15sp"
		        android:textStyle="bold" />

		    <Button
		        android:id="@+id/dialog_quick_color_pick_btn_cancel"
		        android:layout_width="fill_parent"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="20dp"
		        android:layout_weight="1"
		        android:background="@drawable/button_normal"
		        android:gravity="center_vertical|center_horizontal"
		        android:maxHeight="48dp"
		        android:minHeight="28dp"
		        android:minWidth="64dp"
		        android:text="@string/text_cancel"
		        android:textColor="@color/button_text"
		        android:textSize="15sp"
		        android:textStyle="bold"
		        android:typeface="normal" />

		</LinearLayout>

	</LinearLayout>

